--- a/src/components/ForgotPasswordPage.css
+++ b/src/components/ForgotPasswordPage.css
@@ -1,5 +1,6 @@
-.login-container {
+.FPP-container {
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
     align-items: center;
     height: 100vh;
@@ -7,10 +8,10 @@
     padding-left: 200px;
   }
   
-  .login-form {
+  .email-form {
     display: flex;
     flex-direction: column;
-    justify-content:center;
+    justify-content: center;
     align-items:left;
     margin-top:3%;
     height:430px;
@@ -25,62 +26,32 @@
     border-top: 4.8px solid #55679C;
   }
   
-  h1 {
-    font-size: 36px;
-    margin-bottom: 10px;
+  .email-form > H2 {
+    margin-bottom: 15px;
     color: black;
   }
   
-  p {
+  .FPP-container > p {
     font-size: 16px;
     color: #666;
     margin-bottom: 10px;
   }
 
-  .form-group {
+  .FPP-form-group {
     margin-bottom: 20px;
     display:flex;
     flex-direction: column;
   }
-  
-  
-  
-  .forgot-password {
-    font-size: 14px;
-    text-align: right; 
-  }
-  
-  .forgot-password a {
-    color: #4a90e2; /* Blue color for the link */
-    text-decoration: none;
-  }
-  
-  .forgot-password a:hover {
-    text-decoration: underline;
-  }
-  .form-group-inline {
-    display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-  }
-  .remember-me{
-    display: flex;
-    align-items: center;
-  }
-  .remember-me input {
-    margin-right: 5px;
-  }
+    
 
-  label {
+  .FPP-container > label {
     display: block;
     font-weight: 600;
     margin-top: 5px;
     margin-bottom: 5px;
   }
   
-  input[type="text"],
-  input[type="password"] {
+  input[type="Email"] {
     padding: 10px;
     border: 1px solid #DEE5F8;
     border-radius: 1.8px;
@@ -88,35 +59,44 @@
     height:1.5rem;
     box-shadow: 0px 2.4px 4.8px 0px #00000040;
   }
+  .back-button{
+    display:flex;
+    align-items: center;
+    text-decoration: none;
+    color:#666;
+    margin-bottom: 3em;
+  }
 
-  input[type="text"]:focus,
-input[type="password"]:focus {
+  .back-button :hover{
+    color:#000;
+    transition-duration:30ms;
+  }
+
+  .back-button > img{
+    height:1.2em;
+    width:1.2em;
+  }
+
+  .back-button > span{
+    margin-left:0.2em;
+  }
+
+
+   input[type="Email"]:focus {
   outline: none;
   border: 1px solid #DEE5F8; 
 }
 
-  ::placeholder{
+.FPP-container > ::placeholder{
     font-family:'Montserrat';
     color: #707070;
-
-  }
-
-  #rememberme{
-    display: block;
-    font-weight: 600;
-    margin-top: 5px;
-    margin-bottom: 5px;
-  }
-
-  input[type="checkbox"] {
-    margin-right: 5px;
-    top: 10px;
   }
   
-  button {
+  .FPP-container > button[type ='submit'] {
     font-family: 'montserrat';
     width: 100%;
     padding: 12px;
+    margin-top:3em;
     background-color: #000;
     color: #fff;
     border: none;
@@ -125,12 +105,12 @@ input[type="password"]:focus {
     font-size: 16px;
   }
   
-  button:hover {
+  .FPP-container > button:hover {
     background-color: rgba(4, 8, 27, 0.85);
 
   }
   
-  .login-image {
+  .FPP-container > .login-image {
     margin-top:3%;
     width: 50%;
     text-align: right;
@@ -146,50 +126,51 @@ input[type="password"]:focus {
   }
 
   @media (max-width: 480px) {
-    .login-form {
+    .email-form {
       padding: 25px;
       width:100%;
       min-width: none;
+
     }
-    .login-container{
+    .FPP-container{
       max-height: 100vh;
       padding:29px;
       padding-bottom: 0;
+      padding-top:0px;
       overflow:hidden;
       display: flex;
     }
   
-    h1 {
+    .FPP-container > h2 {
       font-size: 24px;
       margin-bottom: 20px;
     }
   
-    h3 {
-      font-size: 18px;
-    }
-  
-    p {
+    .FPP-container > p {
       font-size: 14px;
+      margin-bottom: 10em;
     }
   
-    input[type="text"],
-    input[type="password"],
-    button[type="submit"] {
+    input[type="Email"] {
       font-size: 14px;
       padding: 8px;
     }
+
+    button[type="submit"] {
+       height:3em;
+      }
   
-    .login-image{
+    .FPP-container > .login-image{
       width:0;
       height:0;
       padding:0;
     }
     
 
-    .login-image img {
+    .FPP-container > .login-image img {
       display: none; 
       width:0;
-      height:0;/* Hide the image on very small screens if necessary */
+      height:0;
     }
   }
   
